# drone-detector-system

./: README.md
backend/: .env  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: websocket.py
backend/app/api/routes/: __init__.py  countermeasures.py  drones.py  system.py
backend/app/core/: connection.py  globals.py  models.py
backend/app/countermeasures/: __init__.py  jammer.py  physical.py  takeover.py
backend/app/services/: drone_service.py
backend/app/simulator/: drone_simulator.py  geo_utils.py
backend/tests/: test_simulator.py
frontend/: .env  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: countermeasureApi.js  droneApi.js  websocket.js
frontend/src/components/: AlertPanel.jsx  ControlPanel.jsx  CountermeasurePanel.jsx  DroneList.jsx  DroneMap.jsx  RadarDisplay.jsx
frontend/src/context/: DroneContext.jsx
frontend/src/styles/: tailwind.css
