[tool.poetry]
name = "drone-detection-backend"
version = "0.1.0"
description = "Backend for Drone Detection and Radar System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
websockets = "^11.0.3"
python-dotenv = "^1.0.0"
faker = "^19.3.1"
pyrtlsdr = {version = "^0.2.93", optional = true}
pyModeS = {version = "^2.14", optional = true}
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[tool.poetry.extras]
hardware = ["pyrtlsdr", "pyModeS"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"